--- a/Software/Signal Localization/Signal Localization.csproj
+++ b/Software/Signal Localization/Signal Localization.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Models\Zatvorenik.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ZatvorenikRepository.cs" />
     <EmbeddedResource Include="FrmDescriptiveData.resx">
       <DependentUpon>FrmDescriptiveData.cs</DependentUpon>
     </EmbeddedResource>
@@ -81,6 +82,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DBLayer\DBLayer.csproj">
+      <Project>{d8618116-ab5e-43fa-a721-039ae2a58c73}</Project>
+      <Name>DBLayer</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
