--- a/Software/SignalLocalization/SignalLocalization.csproj
+++ b/Software/SignalLocalization/SignalLocalization.csproj
@@ -52,6 +52,8 @@
     <Compile Include="FrmOpisniPodaci.Designer.cs">
       <DependentUpon>FrmOpisniPodaci.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\Osoba.cs" />
+    <Compile Include="Models\Zatvorenik.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
