--- a/Software/SignalLocalization/SignalLocalization.csproj
+++ b/Software/SignalLocalization/SignalLocalization.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Models\Zatvorenik.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ZatvorenikRepository.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
