--- a/Software/SignalLocalization/App.config
+++ b/Software/SignalLocalization/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="SignalLocalization.Properties.Settings.jbagaric20_DBConnectionString"
+            connectionString="Data Source=31.147.204.119\PISERVER,1433;Initial Catalog=jbagaric20_DB;Persist Security Info=True;User ID=jbagaric20;Password=#A{v+t8H"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
