--- a/Software/SignalLocalization/SignalLocalization.csproj
+++ b/Software/SignalLocalization/SignalLocalization.csproj
@@ -52,10 +52,37 @@
     <Compile Include="FrmOpisniPodaci.Designer.cs">
       <DependentUpon>FrmOpisniPodaci.cs</DependentUpon>
     </Compile>
+    <Compile Include="jbagaric20_DBDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>jbagaric20_DBDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="jbagaric20_DBDataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>jbagaric20_DBDataSet1.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="jbagaric20_DBDataSet2.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>jbagaric20_DBDataSet2.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="jbagaric20_DBDataSet3.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>jbagaric20_DBDataSet3.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="jbagaric20_DBDataSet4.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>jbagaric20_DBDataSet4.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Models\Osoba.cs" />
+    <Compile Include="Models\Prostorija.cs" />
     <Compile Include="Models\Zatvorenik.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ProstorijaRepository.cs" />
     <Compile Include="Repositories\ZatvorenikRepository.cs" />
     <EmbeddedResource Include="FrmOpisniPodaci.resx">
       <DependentUpon>FrmOpisniPodaci.cs</DependentUpon>
@@ -69,6 +96,61 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="jbagaric20_DBDataSet.xsc">
+      <DependentUpon>jbagaric20_DBDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="jbagaric20_DBDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>jbagaric20_DBDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="jbagaric20_DBDataSet.xss">
+      <DependentUpon>jbagaric20_DBDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="jbagaric20_DBDataSet1.xsc">
+      <DependentUpon>jbagaric20_DBDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="jbagaric20_DBDataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>jbagaric20_DBDataSet1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="jbagaric20_DBDataSet1.xss">
+      <DependentUpon>jbagaric20_DBDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="jbagaric20_DBDataSet2.xsc">
+      <DependentUpon>jbagaric20_DBDataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="jbagaric20_DBDataSet2.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>jbagaric20_DBDataSet2.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="jbagaric20_DBDataSet2.xss">
+      <DependentUpon>jbagaric20_DBDataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="jbagaric20_DBDataSet3.xsc">
+      <DependentUpon>jbagaric20_DBDataSet3.xsd</DependentUpon>
+    </None>
+    <None Include="jbagaric20_DBDataSet3.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>jbagaric20_DBDataSet3.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="jbagaric20_DBDataSet3.xss">
+      <DependentUpon>jbagaric20_DBDataSet3.xsd</DependentUpon>
+    </None>
+    <None Include="jbagaric20_DBDataSet4.xsc">
+      <DependentUpon>jbagaric20_DBDataSet4.xsd</DependentUpon>
+    </None>
+    <None Include="jbagaric20_DBDataSet4.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>jbagaric20_DBDataSet4.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="jbagaric20_DBDataSet4.xss">
+      <DependentUpon>jbagaric20_DBDataSet4.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
