--- a/Software/SignalLocalization/SignalLocalization.csproj
+++ b/Software/SignalLocalization/SignalLocalization.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FrmDodaj.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmDodaj.Designer.cs">
+      <DependentUpon>FrmDodaj.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmOpisniPodaci.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -64,6 +70,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ProstorijaRepository.cs" />
     <Compile Include="Repositories\ZatvorenikRepository.cs" />
+    <EmbeddedResource Include="FrmDodaj.resx">
+      <DependentUpon>FrmDodaj.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmOpisniPodaci.resx">
       <DependentUpon>FrmOpisniPodaci.cs</DependentUpon>
     </EmbeddedResource>
